crates/macro/tests/ui/unsupported_item.rs
use externref_macro::externref;

#[externref]
pub struct Test;

fn main() {}
